# slalib-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ported-modules.md
src/: CMakeLists.txt  addet.cc  airmas.cc  altaz.cc  atmdsp.cc  av2m.cc  bear.cc  caf2r.cc  caldj.cc  calyd.cc  cc2s.cc  cc62s.cc  cd2tf.cc  cldj.cc  clyd.cc  combn.cc  cr2af.cc  cr2tf.cc  cs2c.cc  cs2c6.cc  ctf2d.cc  ctf2r.cc  daf2r.cc  dat.cc  dav2m.cc  dbear.cc  dc62s.cc  dcc2s.cc  dcmpf.cc  dcs2c.cc  dd2tf.cc  de2h.cc  deuler.cc  dh2e.cc  dimxv.cc  djcal.cc  djcl.cc  dm2av.cc  dmat.cc  dmoon.cc  (+115 more)
tests/: CMakeLists.txt  main.cc  sla_test.cc  sla_test.h
util/: f2cai
